--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "@trpc/client": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "dotenv": "^16.0.3",
-    "drizzle-orm": "^0.16.1",
-    "drizzle-orm-pg": "^0.16.3",
-    "drizzle-zod": "^0.1.2",
+    "drizzle-orm": "^0.17.0",
+    "drizzle-zod": "0.1.3",
     "express": "^4.18.2",
     "postgres": "^3.3.3",
     "zod": "^3.20.2"
